shared-core-rs/bindings/swift/hyperwhisper_coreFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
RustBuffer uniffi_hyperwhisper_core_fn_func_groq_build_transcribe_request(RustBuffer params, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_groq_parse_transcribe_response(RustBuffer resp, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_hw_cloud_health_default(RustCallStatus *_Nonnull out_status
    
);
RustBuffer uniffi_hyperwhisper_core_fn_func_hyperwhisper_cloud_build_transcribe_request(RustBuffer params, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_hyperwhisper_cloud_parse_credits_remaining(RustBuffer resp, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_hyperwhisper_cloud_parse_credits_used(RustBuffer resp, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_hyperwhisper_cloud_parse_transcribe_response(RustBuffer resp, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_hyperwhisper_core_fn_func_is_retryable(uint16_t status, RustBuffer body, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_license_build_validate_request(RustBuffer license_key, RustBuffer device_id, RustBuffer device_name, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_license_cached_status_within_grace(void*_Nonnull store, int64_t now_unix_secs, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_hyperwhisper_core_fn_func_license_can_download_model(void*_Nonnull store, RustBuffer status, RustBuffer limits, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_hyperwhisper_core_fn_func_license_can_start_recording(void*_Nonnull store, RustBuffer status, RustBuffer limits, int64_t now_unix_secs, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_license_check_limits(void*_Nonnull store, RustBuffer status, RustBuffer limits, int64_t now_unix_secs, RustCallStatus *_Nonnull out_status
);
void uniffi_hyperwhisper_core_fn_func_license_clear_stored_license(void*_Nonnull store, RustCallStatus *_Nonnull out_status
);
int64_t uniffi_hyperwhisper_core_fn_func_license_default_daily_limit_debug(RustCallStatus *_Nonnull out_status
    
);
int64_t uniffi_hyperwhisper_core_fn_func_license_default_daily_limit_release(RustCallStatus *_Nonnull out_status
    
);
int64_t uniffi_hyperwhisper_core_fn_func_license_default_model_limit(RustCallStatus *_Nonnull out_status
    
);
RustBuffer uniffi_hyperwhisper_core_fn_func_license_empty_key_outcome(RustCallStatus *_Nonnull out_status
    
);
RustBuffer uniffi_hyperwhisper_core_fn_func_license_http_error_outcome(uint16_t status_code, RustBuffer body, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_license_limits_defaults(int8_t debug_build, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_license_offline_fallback_outcome(void*_Nonnull store, int64_t now_unix_secs, RustCallStatus *_Nonnull out_status
);
int64_t uniffi_hyperwhisper_core_fn_func_license_offline_grace_secs(RustCallStatus *_Nonnull out_status
    
);
RustBuffer uniffi_hyperwhisper_core_fn_func_license_parse_validate_response(RustBuffer body, RustCallStatus *_Nonnull out_status
);
void uniffi_hyperwhisper_core_fn_func_license_record_model_download(void*_Nonnull store, RustCallStatus *_Nonnull out_status
);
void uniffi_hyperwhisper_core_fn_func_license_record_usage(void*_Nonnull store, int64_t seconds, int64_t now_unix_secs, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_license_remote_override_if_fresh(void*_Nonnull store, int64_t now_unix_secs, RustCallStatus *_Nonnull out_status
);
int64_t uniffi_hyperwhisper_core_fn_func_license_remote_override_ttl_secs(RustCallStatus *_Nonnull out_status
    
);
int8_t uniffi_hyperwhisper_core_fn_func_license_should_revalidate(void*_Nonnull store, int64_t now_unix_secs, RustCallStatus *_Nonnull out_status
);
void uniffi_hyperwhisper_core_fn_func_license_store_license_key(void*_Nonnull store, RustBuffer key, RustCallStatus *_Nonnull out_status
);
void uniffi_hyperwhisper_core_fn_func_license_store_remote_override(void*_Nonnull store, RustBuffer limits, int64_t now_unix_secs, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_license_stored_license_key(void*_Nonnull store, RustCallStatus *_Nonnull out_status
);
void uniffi_hyperwhisper_core_fn_func_license_update_validation_cache(void*_Nonnull store, RustBuffer status, int64_t now_unix_secs, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_license_validate_url(RustCallStatus *_Nonnull out_status
    
);
int64_t uniffi_hyperwhisper_core_fn_func_license_validation_cache_secs(RustCallStatus *_Nonnull out_status
    
);
RustBuffer uniffi_hyperwhisper_core_fn_func_macos_settings_to_universal_settings_json(RustBuffer macos_json, RustBuffer existing_macos_ext_json, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_migrate_cloud_accuracy_tier(RustBuffer value, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_migrate_cloud_pp_model(RustBuffer value, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_mistral_build_transcribe_request(RustBuffer params, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_mistral_parse_transcribe_response(RustBuffer resp, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_hyperwhisper_core_fn_func_models_available_via_hw_cloud(RustBuffer provider, RustBuffer kind, RustBuffer id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_models_language_support(RustBuffer provider, RustBuffer kind, RustBuffer id, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_hyperwhisper_core_fn_func_models_supports_custom_vocabulary(RustBuffer provider, RustBuffer kind, RustBuffer id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_next_retry(uint32_t attempt, uint16_t status, RustBuffer body, RustBuffer retry_after, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_normalize_backup_json(RustBuffer json, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_openai_build_transcribe_request(RustBuffer params, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_openai_parse_transcribe_response(RustBuffer resp, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_parse_health_response(RustBuffer provider, RustBuffer resp, RustCallStatus *_Nonnull out_status
);