shared-core-rs/bindings/csharp/hyperwhisper_core.cs


    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_groq_build_transcribe_request(RustBuffer @params,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_groq_parse_transcribe_response(RustBuffer @resp,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_hw_cloud_health_default(ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_hyperwhisper_cloud_build_transcribe_request(RustBuffer @params,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_hyperwhisper_cloud_parse_credits_remaining(RustBuffer @resp,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_hyperwhisper_cloud_parse_credits_used(RustBuffer @resp,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_hyperwhisper_cloud_parse_transcribe_response(RustBuffer @resp,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern sbyte uniffi_hyperwhisper_core_fn_func_is_retryable(ushort @status,RustBuffer @body,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_license_build_validate_request(RustBuffer @licenseKey,RustBuffer @deviceId,RustBuffer @deviceName,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_license_cached_status_within_grace(IntPtr @store,long @nowUnixSecs,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern sbyte uniffi_hyperwhisper_core_fn_func_license_can_download_model(IntPtr @store,RustBuffer @status,RustBuffer @limits,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern sbyte uniffi_hyperwhisper_core_fn_func_license_can_start_recording(IntPtr @store,RustBuffer @status,RustBuffer @limits,long @nowUnixSecs,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_license_check_limits(IntPtr @store,RustBuffer @status,RustBuffer @limits,long @nowUnixSecs,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_hyperwhisper_core_fn_func_license_clear_stored_license(IntPtr @store,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern long uniffi_hyperwhisper_core_fn_func_license_default_daily_limit_debug(ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern long uniffi_hyperwhisper_core_fn_func_license_default_daily_limit_release(ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern long uniffi_hyperwhisper_core_fn_func_license_default_model_limit(ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_license_empty_key_outcome(ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_license_http_error_outcome(ushort @statusCode,RustBuffer @body,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_license_limits_defaults(sbyte @debugBuild,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_license_offline_fallback_outcome(IntPtr @store,long @nowUnixSecs,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern long uniffi_hyperwhisper_core_fn_func_license_offline_grace_secs(ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_license_parse_validate_response(RustBuffer @body,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_hyperwhisper_core_fn_func_license_record_model_download(IntPtr @store,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_hyperwhisper_core_fn_func_license_record_usage(IntPtr @store,long @seconds,long @nowUnixSecs,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_license_remote_override_if_fresh(IntPtr @store,long @nowUnixSecs,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern long uniffi_hyperwhisper_core_fn_func_license_remote_override_ttl_secs(ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern sbyte uniffi_hyperwhisper_core_fn_func_license_should_revalidate(IntPtr @store,long @nowUnixSecs,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_hyperwhisper_core_fn_func_license_store_license_key(IntPtr @store,RustBuffer @key,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_hyperwhisper_core_fn_func_license_store_remote_override(IntPtr @store,RustBuffer @limits,long @nowUnixSecs,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_license_stored_license_key(IntPtr @store,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_hyperwhisper_core_fn_func_license_update_validation_cache(IntPtr @store,RustBuffer @status,long @nowUnixSecs,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_license_validate_url(ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern long uniffi_hyperwhisper_core_fn_func_license_validation_cache_secs(ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_macos_settings_to_universal_settings_json(RustBuffer @macosJson,RustBuffer @existingMacosExtJson,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_migrate_cloud_accuracy_tier(RustBuffer @value,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_migrate_cloud_pp_model(RustBuffer @value,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_mistral_build_transcribe_request(RustBuffer @params,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_mistral_parse_transcribe_response(RustBuffer @resp,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern sbyte uniffi_hyperwhisper_core_fn_func_models_available_via_hw_cloud(RustBuffer @provider,RustBuffer @kind,RustBuffer @id,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_models_language_support(RustBuffer @provider,RustBuffer @kind,RustBuffer @id,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern sbyte uniffi_hyperwhisper_core_fn_func_models_supports_custom_vocabulary(RustBuffer @provider,RustBuffer @kind,RustBuffer @id,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_next_retry(uint @attempt,ushort @status,RustBuffer @body,RustBuffer @retryAfter,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_normalize_backup_json(RustBuffer @json,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_openai_build_transcribe_request(RustBuffer @params,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_openai_parse_transcribe_response(RustBuffer @resp,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_parse_health_response(RustBuffer @provider,RustBuffer @resp,ref UniffiRustCallStatus _uniffi_out_err
    );
